# test_siha

./: .gitignore  README.md  TAM_ENTEGRASYON_REHBERI.md  gazebo_visualizer_v2.py  gz_camera_bridge.py  mavlink_bridge.py  run_all.sh  siha_mimari_diagram.jsx  test_bridge.py  vtail_runway_savasan.sdf
scripts/: README.md  decision_node.py  guidance_node.py  launch_all.sh  mavlink_bridge.py  mission_manager_node.py  requirements.txt  tracker_node.py  vision_gui_node.py
siha_autonomy/: CMakeLists.txt
siha_autonomy/config/: default.yaml
siha_autonomy/include/siha_autonomy/comm/: telemetry_manager.hpp
siha_autonomy/include/siha_autonomy/core/: config.hpp  mission_controller.hpp
siha_autonomy/include/siha_autonomy/decision/: decision_engine.hpp
siha_autonomy/include/siha_autonomy/flight/: flight_controller.hpp  guidance_system.hpp
siha_autonomy/include/siha_autonomy/safety/: safety_monitor.hpp
siha_autonomy/launch/: autonomy_launch.py  siha_launch.py
siha_autonomy/src/comm/: server_comm.cpp
siha_autonomy/src/core/: mission_controller.cpp
siha_autonomy/src/decision/: decision_engine.cpp
siha_autonomy/src/flight/: flight_controller.cpp  guidance_system.cpp
siha_autonomy/src/mission/: evasion_module.cpp
siha_autonomy/src/vision/: video_pipeline.cpp
siha_autonomy_v2/siha_autonomy/: CMakeLists.txt
siha_autonomy_v2/siha_autonomy/include/siha_autonomy/core/: mission_controller.hpp
siha_autonomy_v2/siha_autonomy/include/siha_autonomy/mission/: evasion_module.hpp  kamikaze_module.hpp
siha_autonomy_v2/siha_autonomy/include/siha_autonomy/recording/: video_recorder.hpp
siha_autonomy_v2/siha_autonomy/src/: main_node.cpp
siha_autonomy_v2/siha_autonomy/src/comm/: telemetry_manager.cpp
siha_autonomy_v2/siha_autonomy/src/core/: mission_controller.cpp
siha_autonomy_v2/siha_autonomy/src/flight/: flight_controller.cpp
siha_autonomy_v2/siha_autonomy/src/mission/: qr_detector.cpp
siha_autonomy_v2/siha_autonomy/src/safety/: safety_monitor.cpp
siha_autonomy_v2/siha_autonomy/src/vision/: yolo_detector.cpp
siha_autonomy_v3/siha_autonomy/: package.xml
siha_autonomy_v3/siha_autonomy/include/siha_autonomy/comm/: server_comm.hpp
siha_autonomy_v3/siha_autonomy/include/siha_autonomy/core/: mission_controller.hpp
siha_autonomy_v3/siha_autonomy/src/core/: mission_controller.cpp
siha_autonomy_v3/siha_autonomy/src/flight/: guidance_system.cpp  pid_controller.cpp
siha_autonomy_v3/siha_autonomy/src/mission/: kamikaze_module.cpp  search_pattern.cpp
siha_autonomy_v3/siha_autonomy/src/recording/: video_recorder.cpp
siha_autonomy_v3/siha_autonomy/src/vision/: lockon_manager.cpp  target_tracker.cpp
test_setup/: CALISTIRMA_REHBERI.md  Dockerfile  docker-compose.yml  install.sh
(+10 files in other folders)
